fix: index recent magazines size on mobile

--- a/static/css/basic.css
+++ b/static/css/basic.css
@@ -195,7 +195,7 @@ footer a:hover {
     body {
         height: unset;
     }
-    header > :not(h1):not(i) {
+    header > :not(h1):not(#see-more) {
         display: none;
     }
     header {
@@ -213,7 +213,7 @@ footer a:hover {
         display: block;
     }
     footer {
-        
+        grid-template-columns: 1fr;
     }
 }
 @media only screen and (max-width: 768px) {
